--- a/bio.html
+++ b/bio.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
     <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+
         <title>Biography</title>
     </head>
     <body>
         <h1>Biography</h1>
         <p>My name is Stephan Green and I am a History major from Tufts University.
            </p>
+        <a href="index.html">Back to Home</a>
     </body>
 </html>
