added README.md and finished bio.html

--- a/bio.html
+++ b/bio.html
@@ -6,9 +6,16 @@
         <title>Biography</title>
     </head>
     <body>
+      <div class="centering">
         <h1>Biography</h1>
-        <p>My name is Stephan Green and I am a History major from Tufts University.
-           </p>
+        <p>My name is Stephan Green and I am a History major from Tufts
+          University. However, I haven taken quite a few Computer Science
+          courses and have done a lot of programming in the past. In the summer
+          of 2020, I have been in a few game jams from itch.io with some friends
+          but to be honest, I am the one who did most of the work on those
+          games.
+        </p>
         <a href="index.html">Back to Home</a>
+      </div>
     </body>
 </html>
